syntax = "proto3";

package users;

service Users {
    rpc GetUserByMail(GetByMailRequest) returns (GetUserResponse) {}
    rpc GetUserByID(GetByIDRequest) returns (GetUserResponse) {}
    rpc FindUserByName(FindUserByNameRequest) returns (FindUserByNameResponse) {}
}

message GetByMailRequest {
    string mail = 1;
}

message GetByIDRequest {
    string id = 1;
    string destination = 2;
}

message User {
    string id = 1;
    string mail = 2;
    string firstName = 3;
    string lastName = 4;
    string fullName = 5;
    repeated string hierarchy = 6;
    string hierarchyFlat = 7;
}

// message Unit {
//     string name =1;
//     repeated string approvers = 2;
// }

message GetUserResponse {
    User user = 1;
}

message FindUserByNameRequest {
    string name = 1;
    string destination = 2;
}

message FindUserByNameResponse {
    repeated User users = 1;
}